[project]
name = "yandex-eat"
version = "0.1.0"
description = "Unofficial consumer API client for Yandex Eda / Lavka / Delivery order tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
yandex-eat = "yandex_eat.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["yandex_eat*"]
